# morobot_waypoint_patrol

iahrs_driver/src/: iahrs_driver.cpp
md_v2.2b/: CMakeLists.txt  package.xml
md_v2.2b/launch/: md.launch
md_v2.2b/src/: cmd_main.cpp  com.cpp  main.cpp
morobot/DATA/: DOCK.txt  POINT1.txt  POINT2.txt
morobot/morobot/: CMakeLists.txt  package.xml
morobot/morobot_bringup/: CMakeLists.txt  package.xml  setup.py
morobot/morobot_bringup/launch/: morobot_G2.launch  morobot_model.launch  morobot_remote_G2.launch
morobot/morobot_bringup/launch/includes/: description.launch.G2.xml
morobot/morobot_description/: CMakeLists.txt  package.xml
morobot/morobot_description/urdf/: morobot.urdf.g2.xacro
morobot/morobot_gazebo/: CMakeLists.txt  package.xml
morobot/morobot_gazebo/launch/: morobot_empty_world.launch  morobot_erica.launch  morobot_gazebo_rviz.launch  morobot_turtlebot3_house.launch  morobot_turtlebot3_world.launch
morobot/morobot_gazebo/sdf/: morobot.gazebo.xacro
morobot/morobot_navigation/: CMakeLists.txt  package.xml
morobot/morobot_navigation/launch/: morobot_navigation.launch  morobot_navigation_G2.launch  morobot_navigation_rviz.launch  morobot_waypoint_navigation_rviz.launch  move_base.launch
morobot/morobot_navigation/maps/: map.pgm
morobot/morobot_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
morobot/morobot_navigation/rviz/: morobot_navigation.rviz  morobot_navigation_marker.rviz  morobot_waypoint_navigation.rviz
morobot/morobot_recognition/: CMakeLists.txt  package.xml
morobot/morobot_recognition/launch/: morobot_ar_track.launch  morobot_ar_track_model.launch
morobot/morobot_service/: CMakeLists.txt  package.xml
morobot/morobot_service/src/: morobot_service (point nav joy marker)).cpp  morobot_service.cpp  morobot_service_1 (Setlocation).cpp  morobot_service_2 (point nav).cpp  morobot_service_3 (point nav joy).cpp
morobot/morobot_slam/: CMakeLists.txt  package.xml
morobot/morobot_slam/launch/: morobot_gmapping.launch  morobot_slam.launch  morobot_slam_G2.launch  morobot_slam_rviz.launch
morobot/morobot_teleop/: CMakeLists.txt  package.xml
morobot/morobot_teleop/launch/: morobot_teleop_key.launch
morobot/morobot_teleop/nodes/: morobot_teleop_key
morobot_joy_teleop/: CMakeLists.txt  package.xml
morobot_joy_teleop/scripts/: morobot_joy_teleop.py
