<?xml version="1.0"?>
<package format="2">
  <name>morobot_bringup</name>
  <version>0.0.1</version>
  <description>
    morobot package - launchers for robot bringup
  </description>
  <license>Apache 2.0</license>
  <author email="odk9611@gmail.com">Bishop Pearson</author>
  <maintainer email="odk9611@gmail.com">Bishop Pearson</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geomtry_msgs</build_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>usb_cam</depend>
  <depend>roslib</depend>
  <depend>morobot_description</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geomtry_msgs</exec_depend>

</package>
