<?xml version="1.0"?>
<package format="2">
  <name>morobot_slam</name>
  <version>0.0.1</version>
  <description>
    morobot package - launchers which uses optimized gmapping parameters.
  </description>
  <license>Apache 2.0</license>
  <author email="odk9611@gmail.com">Bishop Pearson</author>
  <maintainer email="odk9611@gmail.com">Bishop Pearson</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>morobot_bringup</exec_depend>
  <exec_depend>gmapping</exec_depend>
</package>
