<?xml version="1.0"?>
<package format="2">
  <name>morobot_teleop</name>
  <version>0.0.1</version>
  <description>
    morobot package - Teleoperation tools.
  </description>
  <license>BSD</license>
  <author>Melonee Wise</author>
  <author email="odk9611@gmail.com">Bishop Pearson</author>
  <maintainer email="odk9611@gmail.com">Bishop Pearson</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
